*header/footer added *sidebar in products.html

--- a/TP1/product.html
+++ b/TP1/product.html
@@ -5,6 +5,20 @@
   <title>OnlineShop - Produit</title>
 </head>
 <body>
+<header>
+  <a href="index.html"><img src="assets/img/logo.svg" alt="just a logo"></a>
+  <nav>
+    <a href="index.html">Accueil</a>
+    <a href="products.html">Produits</a>
+    <a href="contact.html">Contact</a>
+    <a href="shopping-cart.html">Panier</a>
+  </nav>
+</header>
+<footer>
+  <ul>
+    <li>Paul-Arthur Thiéry 1969108</li>
+  </ul>
+</footer>
 <!-- TODO -->
 </body>
 </html>
