--- a/TP1/products.html
+++ b/TP1/products.html
@@ -16,7 +16,28 @@
   </header>
   <br>
   <main>
-    
+    <nav>
+      <div id="product-categories">
+        <h3 class="sidebar-title">Catégories</h3>
+        <button>Appareils photo</button>
+        <button>Consoles</button>
+        <button>Ecrans</button>
+        <button>Ordinateurs</button>
+        <button>Tous les produits</button>
+      </div>
+
+      <div id="product-criteria">
+        <h3 class="sidebar-title">Classement</h3>
+        <button>Prix (bas-haut)</button>
+        <button>Pris (haut-bas)</button>
+        <button>Nom (A-Z)</button>
+        <button>Nom (Z-A)</button>
+      </div>
+    </nav>
+    <h1>Produits</h1>
+    <p>6 produits</p>
+    <div id="product1"></div>
+
   </main>
   <br>
   <footer>
