--- a/TP1/product.html
+++ b/TP1/product.html
@@ -19,9 +19,9 @@
   <img src="assets/img/apple-tv.png" alt="An Apple TV">
   <p>L'Apple TV est un appareil conçu par Apple qui permet la communication sans fil entre un ordinateur et un téléviseur. Il est disponible depuis fin mars 2007 dans sa première version.L'appareil ressemble alors par sa forme à un Mac mini, bien qu'il ne fasse que la moitié de sa hauteur. Il communique par réseau sans fil ou Ethernet, avec un appareil iOS ou avec un ordinateur (sous Mac OS X ou sous Windows) par le biais du logiciel iTunes, permettant ainsi de diffuser le contenu vidéo et audio sur le téléviseur, via éventuellement un amplificateur audio-vidéo. (<a href='https://fr.wikipedia.org/wiki/Apple_TV' target='_blank'>Wikipédia</a>)
   </p>
-
+  
+  <h2>Caractéristiques</h2>
   <ul>
-    Caractéristiques
     <li>"Processeur Apple A8"</li>
     <li>"Mémoire vide de 2Go"</li>
     <li>"Stockage de 32 ou 64 Go en mémoire flash"</li>
@@ -30,11 +30,12 @@
   </ul>
   <span>Prix : 249.99</span>
 
-  <form action="">
+  <form action="addToCart">
     <label for="amount">Add to cart :</label>
-    <input type="text" name="amount" value="1" pattern="[1-9]*">
+    <input type="text" id="amount" value="1" pattern="[1-9]*" >
     <input type="submit" value="Ajouter">
   </form>
+
 
 </main>
 <footer>
@@ -42,6 +43,5 @@
     <li>Paul-Arthur Thiéry 1969108</li>
   </ul>
 </footer>
-<!-- TODO -->
 </body>
 </html>
