products + shopping-cart done

--- a/TP1/confirmation.html
+++ b/TP1/confirmation.html
@@ -14,6 +14,12 @@
     <a href="shopping-cart.html">Panier</a>
   </nav>
 </header>
+<main>
+
+
+
+</main>
+
 <footer>
   <ul>
     <li>Paul-Arthur Thiéry 1969108</li>
