--- a/TP1/shopping-cart.html
+++ b/TP1/shopping-cart.html
@@ -1,25 +1,78 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>OnlineShop - Panier</title>
+    <meta charset="UTF-8">
+    <title>OnlineShop - Panier</title>
 </head>
 <body>
 <header>
-  <a href="index.html"><img src="assets/img/logo.svg" alt="just a logo"></a>
-  <nav>
-    <a href="index.html">Accueil</a>
-    <a href="products.html">Produits</a>
-    <a href="contact.html">Contact</a>
-    <a href="shopping-cart.html">Panier</a>
-  </nav>
+    <a href="index.html"><img src="assets/img/logo.svg" alt="just a logo"></a>
+    <nav>
+        <a href="index.html">Accueil</a>
+        <a href="products.html">Produits</a>
+        <a href="contact.html">Contact</a>
+        <a href="shopping-cart.html">Panier</a>
+    </nav>
 </header>
-
+<h1>Panier</h1>
+<table>
+    <tr>
+        <td></td>
+        <td>Nom</td>
+        <td>Prix Unitaire</td>
+        <td>Quantité</td>
+        <td>Prix</td>
+    </tr>
+    <tr>
+        <td>
+            <button>X</button>
+        </td>
+        <td><a href="product.html">Produit 1 </a></td>
+        <td>2.00 $</td>
+        <td>
+            <button>-</button>
+            1
+            <button>+</button>
+        </td>
+        <td>2.00 $</td>
+    </tr>
+    <tr>
+        <td>
+            <button>X</button>
+        </td>
+        <td><a href="product.html"> Produit 2 </a></td>
+        <td>
+            4.00 $
+        </td>
+        <td>
+            <button>-</button>
+            2
+            <button>+</button>
+        </td>
+        <td>8.00 $</td>
+    </tr>
+    <tr>
+        <td>
+            <button>X</button>
+        </td>
+        <td><a href="product.html">Produit 3 </a></td>
+        <td>5.00 $</td>
+        <td>
+            <button>-</button>
+            2
+            <button>+</button>
+        </td>
+        <td>10.00 $</td>
+    </tr>
+</table>
+<span>Total: 20.00 $</span>
+<button>vider le panier</button>
+<a href="order.html">Commander</a>
 
 <footer>
-  <ul>
-    <li>Paul-Arthur Thiéry 1969108</li>
-  </ul>
+    <ul>
+        <li>Paul-Arthur Thiéry 1969108</li>
+    </ul>
 </footer>
 <!-- TODO -->
 </body>
