--- a/TP1/products.html
+++ b/TP1/products.html
@@ -16,33 +16,81 @@
   </header>
   <br>
   <main>
-    <nav>
-      <div id="product-categories">
+    <aside>
+      <section id="product-categories">
         <h3 class="sidebar-title">Catégories</h3>
         <button>Appareils photo</button>
         <button>Consoles</button>
         <button>Ecrans</button>
         <button>Ordinateurs</button>
         <button>Tous les produits</button>
-      </div>
+      </section>
 
-      <div id="product-criteria">
+      <section id="product-criteria">
         <h3 class="sidebar-title">Classement</h3>
         <button>Prix (bas-haut)</button>
         <button>Pris (haut-bas)</button>
         <button>Nom (A-Z)</button>
         <button>Nom (Z-A)</button>
-      </div>
-    </nav>
-    <h1>Produits</h1>
-    <p>6 produits</p>
-    <div id="product1"></div>
+      </section>
+    </aside>
 
+
+    <section id="products-list">
+      <h1>Produits</h1>
+      <span>6 produits</span>
+    <a href="product.html" >
+      <section id="product1">
+      <h2>Canon EOS 5D Mark II</h2>
+      <img src="assets/img/camera-1.png" alt="Picture of a Canon EOS 5D Mark II">
+      <span>2999.99 $</span>
+      </section>
+    </a>
+
+    <a href="product.html" >
+      <section id="product2">
+        <h2>Nikon D7000</h2>
+        <img src="assets/img/camera-2.png" alt="Picture of a Nikon D7000">
+        <span>549.99 $</span>
+      </section>
+    </a>
+
+    <a href="product.html" >
+      <section id="product3">
+        <h2>Canon PowerShot SD1300</h2>
+        <img src="assets/img/camera-3.png" alt="Picture of a Canon PowerShot SD1300">
+        <span>299.99 $</span>
+      </section>
+    </a>
+    <a href="product.html" >
+      <section id="product4">
+        <h2>Apple TV</h2>
+        <img src="assets/img/apple-tv.png" alt="Picture of an Apple TV">
+        <span>249.99 $</span>
+      </section>
+    </a>
+    <a href="product.html" >
+      <section id="product5">
+        <h2>Portable</h2>
+        <img src="assets/img/laptop-1.png" alt="Picture of a laptop">
+        <span>699.99 $</span>
+      </section>
+    </a>
+    <a href="product.html" >
+      <section id="product6">
+        <h2>Portable professionnel</h2>
+        <img src="assets/img/laptop-2.png" alt="Picture of a laptop">
+        <span>599.99 $</span>
+      </section>
+    </a>
+    </section>
   </main>
   <br>
   <footer>
     <ul>
       <li>Paul-Arthur Thiéry 1969108</li>
+      <li>Louis-efflam Le Vély 1969154</li>
+
     </ul>
   </footer>
 </body>
