move order to confirmation

--- a/TP1/confirmation.html
+++ b/TP1/confirmation.html
@@ -1,29 +1,27 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>OnlineShop - Confirmation</title>
+    <meta charset="UTF-8">
+    <title>OnlineShop - Confirmation</title>
 </head>
 <body>
 <header>
-  <a href="index.html"><img src="assets/img/logo.svg" alt="just a logo"></a>
-  <nav>
-    <a href="index.html">Accueil</a>
-    <a href="products.html">Produits</a>
-    <a href="contact.html">Contact</a>
-    <a href="shopping-cart.html">Panier</a>
-  </nav>
+    <a href="index.html"><img src="assets/img/logo.svg" alt="just a logo"></a>
+    <nav>
+        <a href="index.html">Accueil</a>
+        <a href="products.html">Produits</a>
+        <a href="contact.html">Contact</a>
+        <a href="shopping-cart.html">Panier</a>
+    </nav>
 </header>
 <main>
-
-
-
+    <h1>Commande confirmée </h1>
+    <p>Merci de votre confiance, votre commande est maintenant complétée et sera envoyée dan les plus bref délais</p>
 </main>
-
 <footer>
-  <ul>
-    <li>Paul-Arthur Thiéry 1969108</li>
-  </ul>
+    <ul>
+        <li>Paul-Arthur Thiéry 1969108</li>
+    </ul>
 </footer>
 <!-- TODO -->
 </body>
