matricule + name added footer

--- a/TP1/order.html
+++ b/TP1/order.html
@@ -40,7 +40,8 @@
   </main>
   <footer>
     <ul>
-      <li>Paul-Arthur Thiéry 1969108</li>
+      <li>Paul-Arthur Thiéry 1969108
+        <li>Louis-efflam Le Vély 1969154</li>
     </ul>
   </footer>
 </body>
