--- a/TP1/product.html
+++ b/TP1/product.html
@@ -46,6 +46,7 @@
   <footer>
     <ul>
       <li>Paul-Arthur Thiéry 1969108</li>
+        <li>Louis-efflam Le Vély 1969154</li>
     </ul>
   </footer>
 </body>
