--- a/TP1/product.html
+++ b/TP1/product.html
@@ -2,53 +2,58 @@
 <html lang="fr">
 
 <head>
-  <meta charset="UTF-8">
-  <title>OnlineShop - Produit</title>
+    <meta charset="UTF-8">
+    <title>OnlineShop - Produit</title>
 </head>
 
 <body>
-  <header>
+<header>
     <a href="index.html"><img src="assets/img/logo.svg" alt="just a logo"></a>
     <nav>
-      <a href="index.html">Accueil</a>
-      <a href="products.html">Produits</a>
-      <a href="contact.html">Contact</a>
-      <a href="shopping-cart.html">Panier</a>
+        <a href="index.html">Accueil</a>
+        <a href="products.html">Produits</a>
+        <a href="contact.html">Contact</a>
+        <a href="shopping-cart.html">Panier</a>
     </nav>
-  </header>
-  <main>
+</header>
+<main>
     <h1>Apple TV</h1>
     <img src="assets/img/apple-tv.png" alt="An Apple TV">
-    <p>L'Apple TV est un appareil conçu par Apple qui permet la communication sans fil entre un ordinateur et un téléviseur. Il est disponible depuis fin mars 2007 dans sa première version.L'appareil ressemble alors par sa forme à un Mac mini, bien
-      qu'il ne fasse que la moitié de sa hauteur. Il communique par réseau sans fil ou Ethernet, avec un appareil iOS ou avec un ordinateur (sous Mac OS X ou sous Windows) par le biais du logiciel iTunes, permettant ainsi de diffuser le contenu
-      vidéo et audio sur le téléviseur, via éventuellement un amplificateur audio-vidéo. (<a href='https://fr.wikipedia.org/wiki/Apple_TV' target='_blank'>Wikipédia</a>)
+    <p>L'Apple TV est un appareil conçu par Apple qui permet la communication sans fil entre un ordinateur et un
+        téléviseur. Il est disponible depuis fin mars 2007 dans sa première version.L'appareil ressemble alors par sa
+        forme à un Mac mini, bien
+        qu'il ne fasse que la moitié de sa hauteur. Il communique par réseau sans fil ou Ethernet, avec un appareil iOS
+        ou avec un ordinateur (sous Mac OS X ou sous Windows) par le biais du logiciel iTunes, permettant ainsi de
+        diffuser le contenu
+        vidéo et audio sur le téléviseur, via éventuellement un amplificateur audio-vidéo. (<a
+                href='https://fr.wikipedia.org/wiki/Apple_TV' target='_blank'>Wikipédia</a>)
     </p>
 
     <h2>Caractéristiques</h2>
     <ul>
-      <li>"Processeur Apple A8"</li>
-      <li>"Mémoire vide de 2Go"</li>
-      <li>"Stockage de 32 ou 64 Go en mémoire flash"</li>
-      <li>"Connectivités: USB Type-C, HDMI, récepteur infrarouge"</li>
-      <li>"Réseau: Wi-Fi (802.11a/b/g/n/ac), 10/100 Ethernet, Bluetooth, AirPlay"</li>
+        <li>"Processeur Apple A8"</li>
+        <li>"Mémoire vide de 2Go"</li>
+        <li>"Stockage de 32 ou 64 Go en mémoire flash"</li>
+        <li>"Connectivités: USB Type-C, HDMI, récepteur infrarouge"</li>
+        <li>"Réseau: Wi-Fi (802.11a/b/g/n/ac), 10/100 Ethernet, Bluetooth, AirPlay"</li>
     </ul>
     <span>Prix : 249.99</span>
 
     <form action="addToCart">
-      <label for="amount">Add to cart :</label>
-      <input type="text" id="amount" value="1" pattern="[1-9]*" >
-      <input type="submit" value="Ajouter">
+        <label for="amount">Add to cart :</label>
+        <input type="text" id="amount" value="1" pattern="[1-9]*">
+        <input type="submit" value="Ajouter">
 
-  </form>
+    </form>
 
 
-  </main>
-  <footer>
+</main>
+<footer>
     <ul>
-      <li>Paul-Arthur Thiéry 1969108</li>
+        <li>Paul-Arthur Thiéry 1969108</li>
         <li>Louis-efflam Le Vély 1969154</li>
     </ul>
-  </footer>
+</footer>
 </body>
 
 </html>
