--- a/TP2/order.html
+++ b/TP2/order.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>OnlineShop - Commande</title>
     <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 
 <body>
