--- a/TP2/shopping-cart.html
+++ b/TP2/shopping-cart.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>OnlineShop - Panier</title>
     <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
 <header>
