--- a/TP2/index.html
+++ b/TP2/index.html
@@ -1,34 +1,43 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
-    <meta charset="UTF-8">
-    <title>OnlineShop - Accueil</title>
-    <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+  <meta charset="UTF-8">
+  <title>OnlineShop - Accueil</title>
+  <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
+  <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
+
 <body>
-<header>
+  <header>
     <a href="index.html"><img src="assets/img/logo.svg" alt="just a logo"></a>
     <nav>
-        <a href="index.html">Accueil</a>
-        <a href="products.html">Produits</a>
-        <a href="contact.html">Contact</a>
-        <a href="shopping-cart.html">Panier</a>
+      <a href="index.html">Accueil</a>
+      <a href="products.html">Produits</a>
+      <a href="contact.html">Contact</a>
+      <a class="shopping-cart" href="./shopping-cart.html" title="Panier">
+        <span class="fa-stack fa-lg">
+          <i class="fa fa-circle fa-stack-2x fa-inverse"></i>
+          <i class="fa fa-shopping-cart fa-stack-1x"></i>
+        </span>
+        <span class="count">3</span>
+      </a>
     </nav>
-</header>
-<br>
-<main>
+  </header>
+  <br>
+  <main>
     <h1>Online</h1>
     <img src="assets/img/home.png" alt="home logo" width="300">
     <p>Un site pour acheter des choses</p>
     <a href="products.html">Magasiner dès maintenant</a>
-</main>
-<br>
-<footer>
+  </main>
+  <br>
+  <footer>
     <ul>
-        <li>Paul-Arthur Thiéry 1969108</li>
-        <li>Louis-efflam Le Vély 1969154</li>
+      <li>Paul-Arthur Thiéry 1969108</li>
+      <li>Louis-efflam Le Vély 1969154</li>
     </ul>
-</footer>
+  </footer>
 </body>
+
 </html>
