--- a/TP1/contact.html
+++ b/TP1/contact.html
@@ -11,7 +11,13 @@
         <a href="index.html">Accueil</a>
         <a href="products.html">Produits</a>
         <a href="contact.html">Contact</a>
-        <a href="shopping-cart.html">Panier</a>
+        <a class="shopping-cart" href="./shopping-cart.html" title="Panier">
+<span class="fa-stack fa-lg">
+<i class="fa fa-circle fa-stack-2x fa-inverse"></i>
+<i class="fa fa-shopping-cart fa-stack-1x"></i>
+</span>
+<span class="count">3</span>
+</a>
     </nav>
 </header>
 <main>
