--- a/TP2/index.html
+++ b/TP2/index.html
@@ -33,10 +33,9 @@
   </main>
   <br>
   <footer>
-    <ul>
-      <li>Paul-Arthur Thiéry 1969108</li>
-      <li>Louis-efflam Le Vély 1969154</li>
-    </ul>
+    <p>
+      Paul-Arthur Thiéry 1969108  |  Louis-efflam Le Vély 1969154
+    </p>
   </footer>
 </body>
 
