--- a/TP2/products.html
+++ b/TP2/products.html
@@ -23,7 +23,7 @@
     </nav>
 </header>
 <br>
-<main>
+<main class="products-main">
     <aside>
         <section id="product-categories">
             <h3 class="sidebar-title">Catégories</h3>
@@ -31,12 +31,12 @@
             <button>Consoles</button>
             <button>Ecrans</button>
             <button>Ordinateurs</button>
-            <button>Tous les produits</button>
+            <button class="selected">Tous les produits</button>
         </section>
 
         <section id="product-criteria">
             <h3 class="sidebar-title">Classement</h3>
-            <button>Prix (bas-haut)</button>
+            <button class="selected" >Prix (bas-haut)</button>
             <button>Pris (haut-bas)</button>
             <button>Nom (A-Z)</button>
             <button>Nom (Z-A)</button>
