--- a/TP2/index.html
+++ b/TP2/index.html
@@ -12,7 +12,7 @@
   <header>
     <a href="index.html"><img src="assets/img/logo.svg" alt="just a logo"></a>
     <nav>
-      <a href="index.html">Accueil</a>
+      <a href="index.html" class="active">Accueil</a>
       <a href="products.html">Produits</a>
       <a href="contact.html">Contact</a>
       <a class="shopping-cart" href="./shopping-cart.html" title="Panier">
@@ -27,9 +27,9 @@
   <br>
   <main>
     <h1>Online</h1>
-    <img src="assets/img/home.png" alt="home logo" width="300">
+    <img class="landing-image" src="assets/img/home.png" alt="home logo" width="300">
     <p>Un site pour acheter des choses</p>
-    <a href="products.html">Magasiner dès maintenant</a>
+    <a class="btn" href="products.html">Magasiner dès maintenant</a>
   </main>
   <br>
   <footer>
