--- a/TP2/products.html
+++ b/TP2/products.html
@@ -42,11 +42,11 @@
             <button>Nom (Z-A)</button>
         </section>
     </aside>
-
-
+    <div>
+    <h1>Produits</h1>
+    <span>6 produits</span>
     <section id="products-list">
-        <h1>Produits</h1>
-        <span>6 produits</span>
+
         <a href="product.html">
             <section id="product1">
                 <h2>Canon EOS 5D Mark II</h2>
@@ -92,6 +92,7 @@
             </section>
         </a>
     </section>
+    </div>
 </main>
 <br>
 <footer>
