ajout main shopping +  fix footer

--- a/TP2/products.html
+++ b/TP2/products.html
@@ -11,7 +11,7 @@
     <a href="index.html"><img src="assets/img/logo.svg" alt="just a logo"></a>
     <nav>
         <a href="index.html">Accueil</a>
-        <a href="products.html">Produits</a>
+        <a href="products.html" class="active">Produits</a>
         <a href="contact.html">Contact</a>
         <a class="shopping-cart" href="./shopping-cart.html" title="Panier">
           <span class="fa-stack fa-lg">
@@ -44,7 +44,7 @@
     </aside>
     <div>
     <h1>Produits</h1>
-    <span>6 produits</span>
+    <p>6 produits</p>
     <section id="products-list">
 
         <a href="product.html">
@@ -96,11 +96,9 @@
 </main>
 <br>
 <footer>
-    <ul>
-        <li>Paul-Arthur Thiéry 1969108</li>
-        <li>Louis-efflam Le Vély 1969154</li>
-
-    </ul>
+    <p>
+        Paul-Arthur Thiéry 1969108  |  Louis-efflam Le Vély 1969154
+    </p>
 </footer>
 </body>
 </html>
