--- a/TP2/shopping-cart.html
+++ b/TP2/shopping-cart.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
+
 <header>
     <a href="index.html"><img src="assets/img/logo.svg" alt="just a logo"></a>
     <nav>
@@ -22,6 +23,7 @@
         </a>
     </nav>
 </header>
+<main id="shopping">
 <h1>Panier</h1>
 <table>
     <tr>
@@ -76,12 +78,11 @@
 <span>Total: 20.00 $</span>
 <button>vider le panier</button>
 <a href="order.html">Commander</a>
-
+</main>
 <footer>
-    <ul>
-        <li>Paul-Arthur Thiéry 1969108</li>
-        <li>Louis-efflam Le Vély 1969154</li>
-    </ul>
+    <p>
+        Paul-Arthur Thiéry 1969108  |  Louis-efflam Le Vély 1969154
+    </p>
 </footer>
 <!-- TODO -->
 </body>
