minor confirmation update

--- a/TP2/confirmation.html
+++ b/TP2/confirmation.html
@@ -24,8 +24,8 @@
     </nav>
 </header>
 <main>
-    <h1>Commande confirmée </h1>
-    <p>Merci de votre confiance, votre commande est maintenant complétée et sera envoyée dan les plus bref délais</p>
+    <h1>Votre commande est confirmée</h1>
+    <p>Merci de votre confiance, votre commande numéro de confirmation est le <strong>000001</strong> </p>
 </main>
 <footer>
     <ul>
