--- a/TP2/confirmation.html
+++ b/TP2/confirmation.html
@@ -25,7 +25,7 @@
 </header>
 <main>
     <h1>Votre commande est confirmée</h1>
-    <p>Merci de votre confiance, votre commande numéro de confirmation est le <strong>000001</strong> </p>
+    <p>Votre commande numéro de confirmation est le <strong>000001</strong> </p>
 </main>
 <footer>
     <ul>
