fix bug sticky footer

--- a/TP2/confirmation.html
+++ b/TP2/confirmation.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
+<div class="sticky">
 <header>
     <a href="index.html"><img src="assets/img/logo.svg" alt="just a logo"></a>
     <nav>
@@ -24,9 +25,12 @@
     </nav>
 </header>
 <main>
+
     <h1>Votre commande est confirmée</h1>
     <p>Votre commande numéro de confirmation est le <strong>000001</strong> </p>
 </main>
+<div class="push"></div>
+</div>
 <footer>
     <ul>
         <li>Paul-Arthur Thiéry 1969108</li>
