fix bug sticky footer

--- a/TP2/contact.html
+++ b/TP2/contact.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
+<div class="sticky">
 <header>
     <a href="index.html"><img src="assets/img/logo.svg" alt="just a logo"></a>
     <nav>
@@ -40,6 +41,8 @@
   </section>
 
 </main>
+<div class="push"></div>
+</div>
 <footer>
     <ul>
         <li>Paul-Arthur Thiéry 1969108</li>
