--- a/TP2/index.html
+++ b/TP2/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+<div class="sticky">
   <header>
     <a href="index.html"><img src="assets/img/logo.svg" alt="just a logo"></a>
     <nav>
@@ -32,11 +33,15 @@
     <a class="btn" href="products.html">Magasiner dès maintenant</a>
   </main>
   <br>
+  <div class="push"></div>
+</div>
+</div>
   <footer>
     <p>
       Paul-Arthur Thiéry 1969108  |  Louis-efflam Le Vély 1969154
     </p>
   </footer>
+</div>
 </body>
 
 </html>
