--- a/TP2/product.html
+++ b/TP2/product.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+<div class="sticky">
 <header>
     <a href="index.html"><img src="assets/img/logo.svg" alt="just a logo"></a>
     <nav>
@@ -56,6 +57,8 @@
 
 
 </main>
+<div class="push"></div>
+</div>
 <footer>
     <ul>
         <li>Paul-Arthur Thiéry 1969108</li>
