--- a/TP2/products.html
+++ b/TP2/products.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
+<div class="sticky">
 <header>
     <a href="index.html"><img src="assets/img/logo.svg" alt="just a logo"></a>
     <nav>
@@ -95,10 +96,14 @@
     </div>
 </main>
 <br>
+    <div class="push"></div>
+</div>
 <footer>
     <p>
         Paul-Arthur Thiéry 1969108  |  Louis-efflam Le Vély 1969154
     </p>
 </footer>
+
 </body>
+
 </html>
