--- a/TP2/shopping-cart.html
+++ b/TP2/shopping-cart.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-
+<div class="sticky">
   <header>
     <a href="index.html"><img src="assets/img/logo.svg" alt="just a logo"></a>
     <nav>
@@ -83,6 +83,8 @@
       <a href="order.html">Commander</a>
     </section>
   </main>
+  <div class="push"></div>
+  </div>
   <footer>
     <p>
       Paul-Arthur Thiéry 1969108 | Louis-efflam Le Vély 1969154
