--- a/TP2/shopping-cart.html
+++ b/TP2/shopping-cart.html
@@ -29,7 +29,7 @@
     <h1>Panier</h1>
     <table>
       <tr class="border-under">
-        <td class="first-col"></td>
+        <th class="first-col"></th>
         <th>Nom</th>
         <th>Prix Unitaire</th>
         <th>Quantité</th>
