--- a/TP2/order.html
+++ b/TP2/order.html
@@ -2,17 +2,17 @@
 <html lang="fr">
 
 <head>
-    <meta charset="UTF-8">
-    <title>OnlineShop - Commande</title>
-    <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+  <meta charset="UTF-8">
+  <title>OnlineShop - Commande</title>
+  <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
+  <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 
 <body>
-<div class="sticky">
-<header>
-    <a href="index.html"><img src="assets/img/logo.svg" alt="just a logo"></a>
-    <nav>
+  <div class="sticky">
+    <header>
+      <a href="index.html"><img src="assets/img/logo.svg" alt="just a logo"></a>
+      <nav>
         <a href="index.html">Accueil</a>
         <a href="products.html">Produits</a>
         <a href="contact.html">Contact</a>
@@ -23,40 +23,48 @@
           </span>
           <span class="count">3</span>
         </a>
-    </nav>
-</header>
-<main>
-    <h1>Commander</h1>
-    <form action="confirmation.html" method="post">
-        <div class="contact">
-        <h2>Contact</h2>
-        <label for="first-name" class="first">Prénom</label>
-        <input type="text" id="first-name" class="first" required>
-        <label for="last-name" class="second">Nom</label>
-        <input type="text" id="last-name" class="second" required>
-        <label for="email" class="first">E-mail</label>
-        <input type="text" id="email" class="first" required>
-        <label for="phone" class="second">Phone</label>
-        <input type="text" id="phone" class="second" required>
+      </nav>
+    </header>
+    <main class="order">
+      <h1>Commander</h1>
+      <form action="confirmation.html" method="post">
+        <div class="order-contact">
+          <h2>Contact</h2>
+          <div class="first">
+            <label for="first-name">Prénom</label>
+            <input type="text" id="first-name" class="form-control" required placeholder="Prénom">
+            <label for="email">E-mail</label>
+            <input type="text" id="email" class="form-control" required placeholder="E-mail">
+          </div>
+          <div class="second">
+            <label for="last-name">Nom</label>
+            <input type="text" id="last-name" class="form-control" required placeholder="Nom">
+            <label for="phone">Téléphone</label>
+            <input type="text" id="phone" class="form-control" required placeholder="###-###-####">
+          </div>
         </div>
-        <div class="Paiement">
-        <h2>Paiement</h2>
-        <label for="credit-card" class="first">Numéro de carte de crédit</label>
-        <input type="text" id="credit-card" class="first" required>
-        <label for="credit-card-expiry" class="second">Date d'expiration de la carte</label>
-        <input type="text" id="credit-card-expiry" class="second" required>
-        <input type="submit" class="second" value="Payer">
+        <div class="paiement">
+          <h2>Paiement</h2>
+          <div class="first">
+            <label for="credit-card">Numéro de carte de crédit</label>
+            <input type="text" id="credit-card" required class="form-control" placeholder="&#9679;&#9679;&#9679;&#9679;&#9679; &#9679;&#9679;&#9679;&#9679;&#9679; &#9679;&#9679;&#9679;&#9679;&#9679; &#9679;&#9679;&#9679;&#9679;&#9679;">
+          </div>
+          <div class="second">
+            <label for="credit-card-expiry" class="fourth">Date d'expiration de la carte</label>
+            <input type="text" id="credit-card-expiry" class="fourth form-control" required placeholder="mm/aa">
+          </div>
+          <input type="submit" class="third btn" value="Payer">
         </div>
-    </form>
-</main>
-<div class="push"></div>
-</div>
-<footer>
+      </form>
+    </main>
+    <div class="push"></div>
+  </div>
+  <footer>
     <ul>
-        <li>Paul-Arthur Thiéry 1969108
-        <li>Louis-efflam Le Vély 1969154</li>
+      <li>Paul-Arthur Thiéry 1969108
+      <li>Louis-efflam Le Vély 1969154</li>
     </ul>
-</footer>
+  </footer>
 </body>
 
 </html>
