changed footer to correct names

--- a/TP3/contact.html
+++ b/TP3/contact.html
@@ -57,7 +57,7 @@
     </article>
   </main>
   <footer>
-    <p>Par Antoine Béland et Konstantinos Lambrou-Latreille</p>
+    <p>Paul-Arthur Thiéry 1969108 | Louis-efflam Le Vély 1969154</p>
   </footer>
 </body>
 </html>
