--- a/TP3/product.html
+++ b/TP3/product.html
@@ -67,7 +67,7 @@
     </article>
   </main>
   <footer>
-    <p>Par Antoine Béland et Konstantinos Lambrou-Latreille</p>
+    <p>Paul-Arthur Thiéry 1969108 | Louis-efflam Le Vély 1969154</p>
   </footer>
 </body>
 </html>
