--- a/TP3/shopping-cart.html
+++ b/TP3/shopping-cart.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>OnlineShop - Panier</title>
+  <script type="text/javascript" src="./assets/js/jquery-3.2.1.min.js"></script>
   <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
