--- a/TP3/shopping-cart.html
+++ b/TP3/shopping-cart.html
@@ -6,6 +6,9 @@
   <script type="text/javascript" src="./assets/js/jquery-3.2.1.min.js"></script>
   <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+  <script type="text/javascript" src="./assets/scripts/global.js" defer></script>
+  <script type="text/javascript" src="./assets/scripts/shopping-cart.js"></script>
+
 </head>
 <body>
   <header>
