--- a/TP3/products.html
+++ b/TP3/products.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>OnlineShop - Produits</title>
-  <script type="text/javascript" src="./assets/js/jquery-3.2.1.min.js"></script>
   <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
+  <script type="text/javascript" src="./assets/js/jquery-3.2.1.min.js"></script>
+  <script type="text/javascript" src="assets/scripts/controllers/global.js" defer></script>
+  <script type="text/javascript" src="assets/scripts/controllers/products.js"></script>
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
