wip of products for Louis-E

--- a/TP3/products.html
+++ b/TP3/products.html
@@ -5,8 +5,9 @@
   <title>OnlineShop - Produits</title>
   <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
   <script type="text/javascript" src="./assets/js/jquery-3.2.1.min.js"></script>
-  <script type="text/javascript" src="assets/scripts/controllers/global.js" defer></script>
-  <script type="text/javascript" src="assets/scripts/controllers/products.js"></script>
+  <script type="text/javascript" src="./assets/scripts/controllers/global.js" defer></script>
+  <script type="text/javascript" src="./assets/scripts/models/productsmodel.js"></script>
+  <script type="text/javascript" src="./assets/scripts/controllers/products.js"></script>
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
@@ -61,7 +62,7 @@
       <span class="right-header" id="products-count">13 produits</span>
       <h1>Produits</h1>
       <div class="products" id="products-list">
-        <div class="product">
+        <!-- <div class="product">
           <a href="./product.html" title="En savoir plus...">
             <h2>Manette Xbox 360</h2>
             <img alt="Manette Xbox 360" src="./assets/img/xbox-controller.png">
@@ -102,7 +103,7 @@
             <img alt="Console PS3" src="./assets/img/ps3.png">
             <p class="price"><small>Prix</small> 349,99&thinsp;$</p>
           </a>
-        </div>
+        </div> -->
       </div>
     </article>
   </main>
