--- a/TP3/products.html
+++ b/TP3/products.html
@@ -61,50 +61,7 @@
     <article>
       <span class="right-header" id="products-count">13 produits</span>
       <h1>Produits</h1>
-      <div class="products" id="products-list">
-        <!-- <div class="product">
-          <a href="./product.html" title="En savoir plus...">
-            <h2>Manette Xbox 360</h2>
-            <img alt="Manette Xbox 360" src="./assets/img/xbox-controller.png">
-            <p class="price"><small>Prix</small> 29,99&thinsp;$</p>
-          </a>
-        </div>
-        <div class="product">
-          <a href="./product.html" title="En savoir plus...">
-            <h2>Moniteur 19"</h2>
-            <img alt="Moniteur 19&quot;" src="./assets/img/monitor.png">
-            <p class="price"><small>Prix</small> 149,99&thinsp;$</p>
-          </a>
-        </div>
-        <div class="product">
-          <a href="./product.html" title="En savoir plus...">
-            <h2>Console Wii</h2>
-            <img alt="Console Wii" src="./assets/img/wii.png">
-            <p class="price"><small>Prix</small> 199,99&thinsp;$</p>
-          </a>
-        </div>
-        <div class="product">
-          <a href="./product.html" title="En savoir plus...">
-            <h2>Apple TV</h2>
-            <img alt="Apple TV" src="./assets/img/apple-tv.png">
-            <p class="price"><small>Prix</small> 249,99&thinsp;$</p>
-          </a>
-        </div>
-        <div class="product">
-          <a href="./product.html" title="En savoir plus...">
-            <h2>Canon PowerShot SD1300</h2>
-            <img alt="Canon PowerShot SD1300" src="./assets/img/camera-3.png">
-            <p class="price"><small>Prix</small> 299,99&thinsp;$</p>
-          </a>
-        </div>
-        <div class="product">
-          <a href="./product.html" title="En savoir plus...">
-            <h2>Console PS3</h2>
-            <img alt="Console PS3" src="./assets/img/ps3.png">
-            <p class="price"><small>Prix</small> 349,99&thinsp;$</p>
-          </a>
-        </div> -->
-      </div>
+      <div class="products" id="products-list"></div>
     </article>
   </main>
   <footer>
