model for products

--- a/TP3/products.html
+++ b/TP3/products.html
@@ -6,8 +6,8 @@
   <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
   <script type="text/javascript" src="./assets/js/jquery-3.2.1.min.js"></script>
   <script type="text/javascript" src="./assets/scripts/controllers/global.js" defer></script>
-  <script type="text/javascript" src="./assets/scripts/models/productsmodel.js"></script>
-  <script type="text/javascript" src="./assets/scripts/controllers/products.js"></script>
+  <script type="text/javascript" src="./assets/scripts/models/productsmodel.js" defer></script>
+  <script type="text/javascript" src="./assets/scripts/controllers/products.js" defer></script>
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
