--- a/TP3/products.html
+++ b/TP3/products.html
@@ -41,11 +41,11 @@
       <section>
         <h2>Catégories</h2>
         <div class="btn-group vertical" id="product-categories">
-          <button>Appareils photo</button>
-          <button>Consoles</button>
-          <button>Écrans</button>
-          <button>Ordinateurs</button>
-          <button class="selected">Tous les produits</button>
+          <button data-category="cameras">Appareils photo</button>
+          <button data-category="consoles">Consoles</button>
+          <button data-category="screens">Écrans</button>
+          <button data-category="computers">Ordinateurs</button>
+          <button class="selected" data-category="all">Tous les produits</button>
         </div>
       </section>
       <section>
