:wrench: wip product sorting

--- a/TP3/products.html
+++ b/TP3/products.html
@@ -51,10 +51,10 @@
       <section>
         <h2>Classement</h2>
         <div class="btn-group vertical" id="product-criteria">
-          <button class="selected">Prix (bas-haut)</button>
-          <button>Prix (haut-bas)</button>
-          <button>Nom (A-Z)</button>
-          <button>Nom (Z-A)</button>
+          <button class="selected" data-criteria="price">Prix (bas-haut)</button>
+          <button data-criteria="reversePrice">Prix (haut-bas)</button>
+          <button data-criteria="name">Nom (A-Z)</button>
+          <button data-criteria="reverseName">Nom (Z-A)</button>
         </div>
       </section>
     </section>
