page builder product

--- a/TP3/product.html
+++ b/TP3/product.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <title>OnlineShop - Produit</title>
   <script type="text/javascript" src="./assets/js/jquery-3.2.1.min.js"></script>
+  <script type="text/javascript" src="./assets/scripts/controllers/global.js" defer></script>
+  <script type="text/javascript" src="./assets/scripts/models/productsmodel.js" defer></script>
+  <script type="text/javascript" src="./assets/scripts/controllers/product.js" defer></script>
   <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
@@ -34,38 +37,7 @@
     </div>
   </header>
   <main>
-    <article>
-      <h1>Manette Xbox 360</h1>
-      <div class="row">
-        <div class="col">
-          <img id="product-image" alt="Manette Xbox 360" src="./assets/img/xbox-controller.png">
-        </div>
-        <div class="col">
-          <section>
-            <h2>Description</h2>
-            <p>Manette pouvant être branchée à une console Xbox 360 et un PC. Cette manette vous permettra de jouer à vos jeux vidéo préférés.
-            De plus, cette manette est sans fil et comporte un port pour casque d'écoute.</p>
-          </section>
-          <section>
-            <h2>Caractéristiques</h2>
-            <ul>
-              <li>Manette sans fil 2.4GHz avec adapteur USB</li>
-              <li>Compacte et ergonomique</li>
-              <li>Port pour casque d'écoute pour Xbox Live</li>
-            </ul>
-          </section>
-          <hr>
-          <form class="pull-right">
-            <label for="product-quantity">Quantité:</label>
-            <input class="form-control" id="product-quantity" type="number" value="1" min="1">
-            <button class="btn" title="Ajouter au panier" type="submit">
-              <i class="fa fa-cart-plus"></i>&nbsp; Ajouter
-            </button>
-          </form>
-          <p>Prix: <strong>29,99&thinsp;$</strong></p>
-        </div>
-      </div>
-    </article>
+
   </main>
   <footer>
     <p>Paul-Arthur Thiéry 1969108 | Louis-efflam Le Vély 1969154</p>
