--- a/TP3/shopping-cart.html
+++ b/TP3/shopping-cart.html
@@ -6,8 +6,9 @@
   <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
   <script type="text/javascript" src="./assets/js/jquery-3.2.1.min.js"></script>
+  <script type="text/javascript" src="./assets/scripts/models/productsmodel.js" defer></script>
   <script type="text/javascript" src="assets/scripts/controllers/global.js" defer></script>
-  <script type="text/javascript" src="assets/scripts/controllers/shopping-cart.js"></script>
+  <script type="text/javascript" src="assets/scripts/controllers/shopping-cart.js" defer></script>
 
 </head>
 <body>
@@ -49,58 +50,8 @@
             <th>Prix</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <td><button title="Supprimer"><i class="fa fa-times"></i></button></td>
-            <td><a href="./product.html">Console Wii</a></td>
-            <td>199,99&thinsp;$</td>
-            <td>
-              <div class="row">
-                <div class="col">
-                  <button title="Retirer" disabled=""><i class="fa fa-minus"></i></button>
-                </div>
-                <div class="col">1</div>
-                <div class="col">
-                  <button title="Ajouter"><i class="fa fa-plus"></i></button>
-                </div>
-              </div>
-            </td>
-            <td>199,99&thinsp;$</td>
-          </tr>
-          <tr>
-            <td><button title="Supprimer"><i class="fa fa-times"></i></button></td>
-            <td><a href="./product.html">Manette Xbox 360</a></td>
-            <td>29,99&thinsp;$</td>
-            <td>
-              <div class="row">
-                <div class="col">
-                  <button title="Retirer" disabled=""><i class="fa fa-minus"></i></button>
-                </div>
-                <div class="col">1</div>
-                <div class="col">
-                  <button title="Ajouter"><i class="fa fa-plus"></i></button>
-                </div>
-              </div>
-            </td>
-            <td>59,98&thinsp;$</td>
-          </tr>
-          <tr>
-            <td><button title="Supprimer"><i class="fa fa-times"></i></button></td>
-            <td><a href="./product.html">Moniteur 19"</a></td>
-            <td>149,99&thinsp;$</td>
-            <td>
-              <div class="row">
-                <div class="col">
-                  <button title="Retirer" disabled=""><i class="fa fa-minus"></i></button>
-                </div>
-                <div class="col">1</div>
-                <div class="col">
-                  <button title="Ajouter"><i class="fa fa-plus"></i></button>
-                </div>
-              </div>
-            </td>
-            <td>449,97&thinsp;$</td>
-          </tr>
+        <tbody id="table-body">
+
         </tbody>
       </table>
       <p class="shopping-cart-total">Total: <strong>704,94&thinsp;$</strong></p>
