fixed empty shopping cart page

--- a/TP3/shopping-cart.html
+++ b/TP3/shopping-cart.html
@@ -39,7 +39,7 @@
 </header>
 <main>
     <article>
-        <h1>Panier</h1>
+        <h1 id="panier">Panier</h1>
         <table class="table shopping-cart-table">
             <thead>
             <tr>
